// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note display comment in false  Matches snapshot when the note is not comments 1`] = `
<div>
  <div
    class="mod-share-container --no-app py-12 mb-16 mb-0_l sticky float-l_l z-101 transition transition-all transition-duration-250 top-73_min1024"
  >
    <div
      class="mod-share flex flex-column mb-0 p-0_l gap-24"
    >
      <div
        class="share flex relative z-100 flex-column_l bg-light-0 pb-16_l pt-8_l px-8_l flex-wrap gap-16"
        id="v-share"
      >
        <div
          class="first-buttons-group flex gap-16 flex-column_l"
          id="first-button-group"
        >
          <button
            aria-label="Leer resumen generado por inteligencia artificial"
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 --secondary"
            data-event="LinkClick"
            data-section="IA"
            data-variant="secondary"
            id="btnIA"
            title="Leer resumen generado por inteligencia artificial"
            type="button"
          >
            <div
              data-tw="true"
            >
              <mock-ds-common-icon
                name="sparkling"
              />
            </div>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 bookmark --is-saved --secondary"
            data-event="LinkClick"
            data-section="Guardar Nota"
            data-variant="secondary"
            id="btnbookmark"
            title="Guardar nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                critical=""
                name="bookmarkFilled"
              />
            </i>
          </button>
        </div>
        <hr
          class="l-none vertical border border-2"
        />
        <hr
          class="l-only border border-2"
        />
        <div
          class="second-buttons-group flex ai-center gap-16 gap-24_m md:gap-[24px] flex-column_l ai-center_max1023 jc-center_l"
        >
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 sm-only --secondary"
            data-variant="secondary"
            id="compartirMobile"
            title="Compartir la nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="reply"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 sm-only --secondary"
            data-variant="secondary"
            id="whatsAppShareMobile"
            title="Compartir la nota en Whatsapp"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="whatsapp"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="whatsAppShareDesktop"
            style="gap: 4px;"
            title="Compartir la nota en WhatsApp"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="whatsapp"
              />
            </i>
          </button>
          <div
            class="btn-container sm-none flex relative"
          >
            <button
              class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
              data-event="LinkClick"
              data-section="CompartirNotaLN"
              data-variant="default"
              id="copyLinkNote"
              style="gap: 4px;"
              title="Copiar link de la nota"
              type="button"
            >
              <i
                class="icon --icon-24 --inherit"
              >
                <mock-icon
                  name="fileCopy"
                />
              </i>
            </button>
          </div>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnfacebook"
            style="gap: 4px;"
            title="Compartir la nota en Facebook"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="facebook"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btntwitter"
            style="gap: 4px;"
            title="Compartir la nota en X"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="twitter"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 email p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnemail"
            style="gap: 4px;"
            title="Compartir la nota por E-mail"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="mail"
              />
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Share buttons for NOTICIA subtype should show Google follow button for NOTICIA subtype 1`] = `
<div>
  <div
    class="mod-share-container --no-app py-12 mb-16 mb-0_l sticky float-l_l z-101 transition transition-all transition-duration-250 top-73_min1024"
  >
    <div
      class="mod-share flex flex-column mb-0 p-0_l gap-24"
    >
      <div
        class="share flex relative z-100 flex-column_l bg-light-0 pb-16_l pt-8_l px-8_l flex-wrap gap-16"
        id="v-share"
      >
        <div
          class="first-buttons-group flex gap-16 flex-column_l"
          id="first-button-group"
        >
          <button
            aria-label="Leer resumen generado por inteligencia artificial"
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 --secondary"
            data-event="LinkClick"
            data-section="IA"
            data-variant="secondary"
            id="btnIA"
            title="Leer resumen generado por inteligencia artificial"
            type="button"
          >
            <div
              data-tw="true"
            >
              <mock-ds-common-icon
                name="sparkling"
              />
            </div>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 bookmark --is-saved --secondary"
            data-event="LinkClick"
            data-section="Guardar Nota"
            data-variant="secondary"
            id="btnbookmark"
            title="Guardar nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                critical=""
                name="bookmarkFilled"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 comment-btn flex w-fit-content p-8 gap-4 h-40_max1023 h-fit-content_min1024 w-40_min1024 flex-column_l --secondary"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="secondary"
            id="btncomments"
            title="Ir a los comentarios de la nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="chat"
              />
            </i>
          </button>
        </div>
        <hr
          class="l-none vertical border border-2"
        />
        <hr
          class="l-only border border-2"
        />
        <div
          class="second-buttons-group flex ai-center gap-16 gap-24_m md:gap-[24px] flex-column_l ai-center_max1023 jc-center_l"
        >
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 sm-only --secondary"
            data-variant="secondary"
            id="compartirMobile"
            title="Compartir la nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="reply"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="whatsAppShareDesktop"
            style="gap: 4px;"
            title="Compartir la nota en WhatsApp"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="whatsapp"
              />
            </i>
          </button>
          <div
            class="btn-container sm-none flex relative"
          >
            <button
              class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
              data-event="LinkClick"
              data-section="CompartirNotaLN"
              data-variant="default"
              id="copyLinkNote"
              style="gap: 4px;"
              title="Copiar link de la nota"
              type="button"
            >
              <i
                class="icon --icon-24 --inherit"
              >
                <mock-icon
                  name="fileCopy"
                />
              </i>
            </button>
          </div>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnfacebook"
            style="gap: 4px;"
            title="Compartir la nota en Facebook"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="facebook"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btntwitter"
            style="gap: 4px;"
            title="Compartir la nota en X"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="twitter"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 email p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnemail"
            style="gap: 4px;"
            title="Compartir la nota por E-mail"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="mail"
              />
            </i>
          </button>
        </div>
        <div
          class="contents"
          data-tw="true"
        >
          <div
            aria-controls="_r_b_-content"
            aria-describedby="_r_b_-content"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="ds-tooltip-content inline-flex lg:hidden max-w-fit"
            id="_r_b_-trigger"
          >
            <button
              class="ds-button relative overflow-hidden inline-flex items-center justify-center gap-8 whitespace-nowrap transition-colors cursor-pointer [&_svg]:pointer-events-none [&_svg]:shrink-0 h-40 px-16 text-label-md rounded-button font-regular bg-white-default text-white-foreground hover:bg-white-light data-[disabled="true"]:bg-white-lighten px-12 border-1 border-neutral-100"
              data-disabled="false"
              dataevent="LinkClick"
              datasection="CompartirNotaLN"
              style="--ds-icon-size: 20px;"
              title="Agregar LA NACION en Google"
            >
              <span
                class="text text-label-sm font-secondary "
              >
                Agregar en
              </span>
              <mock-ds-common-icon
                color="inherit"
                size="20"
              >
                <mock-icon
                  color=""
                  name="googleColor"
                />
              </mock-ds-common-icon>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Share buttons for NOTICIA subtype should show correct number of buttons for NOTICIA subtype (includes Google buttons) 1`] = `
<div>
  <div
    class="mod-share-container --no-app py-12 mb-16 mb-0_l sticky float-l_l z-101 transition transition-all transition-duration-250 top-73_min1024"
  >
    <div
      class="mod-share flex flex-column mb-0 p-0_l gap-24"
    >
      <div
        class="share flex relative z-100 flex-column_l bg-light-0 pb-16_l pt-8_l px-8_l flex-wrap gap-16"
        id="v-share"
      >
        <div
          class="first-buttons-group flex gap-16 flex-column_l"
          id="first-button-group"
        >
          <button
            aria-label="Leer resumen generado por inteligencia artificial"
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 --secondary"
            data-event="LinkClick"
            data-section="IA"
            data-variant="secondary"
            id="btnIA"
            title="Leer resumen generado por inteligencia artificial"
            type="button"
          >
            <div
              data-tw="true"
            >
              <mock-ds-common-icon
                name="sparkling"
              />
            </div>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 bookmark --is-saved --secondary"
            data-event="LinkClick"
            data-section="Guardar Nota"
            data-variant="secondary"
            id="btnbookmark"
            title="Guardar nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                critical=""
                name="bookmarkFilled"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 comment-btn flex w-fit-content p-8 gap-4 h-40_max1023 h-fit-content_min1024 w-40_min1024 flex-column_l --secondary"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="secondary"
            id="btncomments"
            title="Ir a los comentarios de la nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="chat"
              />
            </i>
          </button>
        </div>
        <hr
          class="l-none vertical border border-2"
        />
        <hr
          class="l-only border border-2"
        />
        <div
          class="second-buttons-group flex ai-center gap-16 gap-24_m md:gap-[24px] flex-column_l ai-center_max1023 jc-center_l"
        >
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 sm-only --secondary"
            data-variant="secondary"
            id="compartirMobile"
            title="Compartir la nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="reply"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="whatsAppShareDesktop"
            style="gap: 4px;"
            title="Compartir la nota en WhatsApp"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="whatsapp"
              />
            </i>
          </button>
          <div
            class="btn-container sm-none flex relative"
          >
            <button
              class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
              data-event="LinkClick"
              data-section="CompartirNotaLN"
              data-variant="default"
              id="copyLinkNote"
              style="gap: 4px;"
              title="Copiar link de la nota"
              type="button"
            >
              <i
                class="icon --icon-24 --inherit"
              >
                <mock-icon
                  name="fileCopy"
                />
              </i>
            </button>
          </div>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnfacebook"
            style="gap: 4px;"
            title="Compartir la nota en Facebook"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="facebook"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btntwitter"
            style="gap: 4px;"
            title="Compartir la nota en X"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="twitter"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 email p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnemail"
            style="gap: 4px;"
            title="Compartir la nota por E-mail"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="mail"
              />
            </i>
          </button>
        </div>
        <div
          class="contents"
          data-tw="true"
        >
          <div
            aria-controls="_r_k_-content"
            aria-describedby="_r_k_-content"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="ds-tooltip-content inline-flex lg:hidden max-w-fit"
            id="_r_k_-trigger"
          >
            <button
              class="ds-button relative overflow-hidden inline-flex items-center justify-center gap-8 whitespace-nowrap transition-colors cursor-pointer [&_svg]:pointer-events-none [&_svg]:shrink-0 h-40 px-16 text-label-md rounded-button font-regular bg-white-default text-white-foreground hover:bg-white-light data-[disabled="true"]:bg-white-lighten px-12 border-1 border-neutral-100"
              data-disabled="false"
              dataevent="LinkClick"
              datasection="CompartirNotaLN"
              style="--ds-icon-size: 20px;"
              title="Agregar LA NACION en Google"
            >
              <span
                class="text text-label-sm font-secondary "
              >
                Agregar en
              </span>
              <mock-ds-common-icon
                color="inherit"
                size="20"
              >
                <mock-icon
                  color=""
                  name="googleColor"
                />
              </mock-ds-common-icon>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components - private - LN - nota - share Clicking on bookmark should DELETE the note if it was already saved 1`] = `
<div>
  <div
    class="mod-share-container --no-app py-12 mb-16 mb-0_l sticky float-l_l z-101 transition transition-all transition-duration-250 top-73_min1024"
  >
    <div
      class="mod-share flex flex-column mb-0 p-0_l gap-24"
    >
      <div
        class="share flex relative z-100 flex-column_l bg-light-0 pb-16_l pt-8_l px-8_l flex-wrap gap-16"
        id="v-share"
      >
        <div
          class="first-buttons-group flex gap-16 flex-column_l"
          id="first-button-group"
        >
          <button
            aria-label="Leer resumen generado por inteligencia artificial"
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 --secondary"
            data-event="LinkClick"
            data-section="IA"
            data-variant="secondary"
            id="btnIA"
            title="Leer resumen generado por inteligencia artificial"
            type="button"
          >
            <div
              data-tw="true"
            >
              <mock-ds-common-icon
                name="sparkling"
              />
            </div>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 bookmark --is-saved --secondary"
            data-event="LinkClick"
            data-section="Guardar Nota"
            data-variant="secondary"
            id="btnbookmark"
            title="Guardar nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                critical=""
                name="bookmarkFilled"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 comment-btn flex w-fit-content p-8 gap-4 h-40_max1023 h-fit-content_min1024 w-40_min1024 flex-column_l --secondary"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="secondary"
            id="btncomments"
            title="Ir a los comentarios de la nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="chat"
              />
            </i>
          </button>
        </div>
        <hr
          class="l-none vertical border border-2"
        />
        <hr
          class="l-only border border-2"
        />
        <div
          class="second-buttons-group flex ai-center gap-16 gap-24_m md:gap-[24px] flex-column_l ai-center_max1023 jc-center_l"
        >
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 sm-only --secondary"
            data-variant="secondary"
            id="compartirMobile"
            title="Compartir la nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="reply"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 sm-only --secondary"
            data-variant="secondary"
            id="whatsAppShareMobile"
            title="Compartir la nota en Whatsapp"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="whatsapp"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="whatsAppShareDesktop"
            style="gap: 4px;"
            title="Compartir la nota en WhatsApp"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="whatsapp"
              />
            </i>
          </button>
          <div
            class="btn-container sm-none flex relative"
          >
            <button
              class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
              data-event="LinkClick"
              data-section="CompartirNotaLN"
              data-variant="default"
              id="copyLinkNote"
              style="gap: 4px;"
              title="Copiar link de la nota"
              type="button"
            >
              <i
                class="icon --icon-24 --inherit"
              >
                <mock-icon
                  name="fileCopy"
                />
              </i>
            </button>
          </div>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnfacebook"
            style="gap: 4px;"
            title="Compartir la nota en Facebook"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="facebook"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btntwitter"
            style="gap: 4px;"
            title="Compartir la nota en X"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="twitter"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 email p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnemail"
            style="gap: 4px;"
            title="Compartir la nota por E-mail"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="mail"
              />
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components - private - LN - nota - share Snapshot - Should show correct number of buttons for non-NOTICIA subtype 1`] = `
<div>
  <div
    class="mod-share-container --no-app py-12 mb-16 mb-0_l sticky float-l_l z-101 transition transition-all transition-duration-250 top-73_min1024"
  >
    <div
      class="mod-share flex flex-column mb-0 p-0_l gap-24"
    >
      <div
        class="share flex relative z-100 flex-column_l bg-light-0 pb-16_l pt-8_l px-8_l flex-wrap gap-16"
        id="v-share"
      >
        <div
          class="first-buttons-group flex gap-16 flex-column_l"
          id="first-button-group"
        >
          <button
            aria-label="Leer resumen generado por inteligencia artificial"
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 --secondary"
            data-event="LinkClick"
            data-section="IA"
            data-variant="secondary"
            id="btnIA"
            title="Leer resumen generado por inteligencia artificial"
            type="button"
          >
            <div
              data-tw="true"
            >
              <mock-ds-common-icon
                name="sparkling"
              />
            </div>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 bookmark --is-saved --secondary"
            data-event="LinkClick"
            data-section="Guardar Nota"
            data-variant="secondary"
            id="btnbookmark"
            title="Guardar nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                critical=""
                name="bookmarkFilled"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 comment-btn flex w-fit-content p-8 gap-4 h-40_max1023 h-fit-content_min1024 w-40_min1024 flex-column_l --secondary"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="secondary"
            id="btncomments"
            title="Ir a los comentarios de la nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="chat"
              />
            </i>
          </button>
        </div>
        <hr
          class="l-none vertical border border-2"
        />
        <hr
          class="l-only border border-2"
        />
        <div
          class="second-buttons-group flex ai-center gap-16 gap-24_m md:gap-[24px] flex-column_l ai-center_max1023 jc-center_l"
        >
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 sm-only --secondary"
            data-variant="secondary"
            id="compartirMobile"
            title="Compartir la nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="reply"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 sm-only --secondary"
            data-variant="secondary"
            id="whatsAppShareMobile"
            title="Compartir la nota en Whatsapp"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="whatsapp"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="whatsAppShareDesktop"
            style="gap: 4px;"
            title="Compartir la nota en WhatsApp"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="whatsapp"
              />
            </i>
          </button>
          <div
            class="btn-container sm-none flex relative"
          >
            <button
              class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
              data-event="LinkClick"
              data-section="CompartirNotaLN"
              data-variant="default"
              id="copyLinkNote"
              style="gap: 4px;"
              title="Copiar link de la nota"
              type="button"
            >
              <i
                class="icon --icon-24 --inherit"
              >
                <mock-icon
                  name="fileCopy"
                />
              </i>
            </button>
          </div>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnfacebook"
            style="gap: 4px;"
            title="Compartir la nota en Facebook"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="facebook"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btntwitter"
            style="gap: 4px;"
            title="Compartir la nota en X"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="twitter"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 email p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnemail"
            style="gap: 4px;"
            title="Compartir la nota por E-mail"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="mail"
              />
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
